<?xml version="1.0"?>
<package format="2">
  <name>nanotron_swarm</name>
  <version>1.0.0</version>
  <description>
     Driver for Nanotron radio ranging sensors which uses the Swarm API firmware.
     This driver will publish range measurements between the host node and 
     other nodes available in the wireless sensor network.
  </description>
  <maintainer email="felramfab@gmail.com">Felipe R.Fabresse</maintainer>
  <license>BSD</license>

  <author>Felipe Ramón Fabresse</author>
  <author>Alfredo Vázquez Reyes</author>
  <author>Fernando Caballero Benitez</author>
  <url>http://ros.org/wiki/nanotron_swarm</url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>rangeonly_msgs</depend>

  <doc_depend>doxygen</doc_depend>
</package>


