<package>
  <name>rangeonly_msgs</name>
  <version>1.0.0</version>
  <description>
     Generic messages for range-only sensors.
  </description>
  <maintainer email="felramfab@gmail.com">Felipe R.Fabresse</maintainer>
  <license>BSD</license>

  <author>Felipe Ramón Fabresse</author>
  <url>http://ros.org/wiki/range-only_msgs</url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>


