<?xml version="1.0"?>
<package format="2">
  <name>rangeonly_msgs</name>
  <version>1.0.0</version>
  <description>
    The rangeonly_msgs package constains generic ROS messages for range-only sensors.
  </description>
  <maintainer email="felramfab@gmail.com">Felipe R.Fabresse</maintainer>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/rangeonly_msgs</url>
  <author email="felramfab@gmail.com">Felipe R.Fabresse</author> -->

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
